[gd_scene load_steps=2 format=3 uid="uid://d0f5eofbld577"]

[ext_resource type="Script" uid="uid://btsmy1qgl4kbc" path="res://scripts/player_info.gd" id="1_oojiu"]

[node name="playerInfo" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_oojiu")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 88.0
color = Color(0, 0, 0, 0.384314)

[node name="healthbar" type="ProgressBar" parent="."]
offset_left = 19.0
offset_top = 26.0
offset_right = 161.0
offset_bottom = 53.0
step = 1.0
value = 100.0
show_percentage = false

[node name="HP" type="Label" parent="healthbar"]
layout_mode = 0
offset_left = 52.0
offset_top = -4.0
offset_right = 117.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 25
text = "HP"

[node name="fruitpoints" type="Label" parent="."]
offset_left = 184.0
offset_top = 28.0
offset_right = 224.0
offset_bottom = 51.0

[node name="menu_button" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "MENU"

[node name="menuPopup" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="menuPopup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 464.0
offset_top = 128.0
offset_right = 728.0
offset_bottom = 528.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="menuPopup"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 568.0
offset_top = 160.0
offset_right = 630.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 0
text = "PAUSED"

[node name="continue" type="Button" parent="menuPopup"]
offset_left = 488.0
offset_top = 200.0
offset_right = 696.0
offset_bottom = 232.0
text = "RESUME"

[node name="restart" type="Button" parent="menuPopup"]
offset_left = 552.0
offset_top = 248.0
offset_right = 627.0
offset_bottom = 279.0
text = "RESTART"

[node name="backmenu" type="Button" parent="menuPopup"]
offset_left = 568.0
offset_top = 288.0
offset_right = 625.0
offset_bottom = 319.0
text = "MENU"

[node name="exit" type="Button" parent="menuPopup"]
offset_left = 576.0
offset_top = 328.0
offset_right = 617.0
offset_bottom = 359.0
text = "EXIT"

[connection signal="pressed" from="menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="menuPopup/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="menuPopup/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="menuPopup/backmenu" to="." method="_on_backmenu_pressed"]
[connection signal="pressed" from="menuPopup/exit" to="." method="_on_exit_pressed"]
